--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,24 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8fdd99">  <td>19/09/06 20:22:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setup()[pri:0, instance:com.techpath.testcases.LoginTest@79ca92b9]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1448247698</td>   <td></td> </tr>
-<tr bgcolor="8fdd99">  <td>19/09/06 20:22:31</td>   <td>12565</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.Login()[pri:0, instance:com.techpath.testcases.LoginTest@79ca92b9]">Login</td> 
-  <td>main@1448247698</td>   <td></td> </tr>
-<tr bgcolor="8fdd99">  <td>19/09/06 20:22:38</td>   <td>18762</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:com.techpath.testcases.LoginTest@79ca92b9]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1448247698</td>   <td></td> </tr>
-<tr bgcolor="8fdd99">  <td>19/09/06 20:22:38</td>   <td>19513</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:com.techpath.testcases.LoginTest@79ca92b9]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1448247698</td>   <td></td> </tr>
-<tr bgcolor="c1a09d">  <td>19/09/06 20:22:38</td>   <td>19514</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setup()[pri:0, instance:com.techpath.testcases.HomePageTest@1460a8c0]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1448247698</td>   <td></td> </tr>
-<tr bgcolor="c1a09d">  <td>19/09/06 20:22:48</td>   <td>28932</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.test1()[pri:0, instance:com.techpath.testcases.HomePageTest@1460a8c0]">test1</td> 
-  <td>main@1448247698</td>   <td></td> </tr>
-<tr bgcolor="c1a09d">  <td>19/09/06 20:22:50</td>   <td>30674</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.techpath.testcases.HomePageTest@1460a8c0]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1448247698</td>   <td></td> </tr>
-<tr bgcolor="c1a09d">  <td>19/09/06 20:22:50</td>   <td>31389</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.test2()[pri:0, instance:com.techpath.testcases.HomePageTest@1460a8c0]">test2</td> 
-  <td>main@1448247698</td>   <td></td> </tr>
-<tr bgcolor="c1a09d">  <td>19/09/06 20:22:50</td>   <td>31398</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.techpath.testcases.HomePageTest@1460a8c0]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1448247698</td>   <td></td> </tr>
-<tr bgcolor="c1a09d">  <td>19/09/06 20:22:50</td>   <td>31399</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.techpath.testcases.HomePageTest@1460a8c0]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1448247698</td>   <td></td> </tr>
+<tr bgcolor="b0b186">  <td>19/09/07 10:18:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setup(java.lang.String)[pri:0, instance:com.techpath.testcases.LoginTest@4387b79e]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1556995360</td>   <td></td> </tr>
+<tr bgcolor="b0b186">  <td>19/09/07 10:18:56</td>   <td>12253</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.Login()[pri:0, instance:com.techpath.testcases.LoginTest@4387b79e]">Login</td> 
+  <td>main@1556995360</td>   <td></td> </tr>
+<tr bgcolor="b0b186">  <td>19/09/07 10:19:03</td>   <td>19084</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.tearDown()[pri:0, instance:com.techpath.testcases.LoginTest@4387b79e]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1556995360</td>   <td></td> </tr>
+<tr bgcolor="6498bf">  <td>19/09/07 10:19:04</td>   <td>19836</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setup()[pri:0, instance:com.techpath.testcases.HomePageTest@6e75aa0d]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1556995360</td>   <td></td> </tr>
+<tr bgcolor="6498bf">  <td>19/09/07 10:19:13</td>   <td>29720</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.test1()[pri:0, instance:com.techpath.testcases.HomePageTest@6e75aa0d]">test1</td> 
+  <td>main@1556995360</td>   <td></td> </tr>
+<tr bgcolor="6498bf">  <td>19/09/07 10:19:15</td>   <td>31400</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.test2()[pri:0, instance:com.techpath.testcases.HomePageTest@6e75aa0d]">test2</td> 
+  <td>main@1556995360</td>   <td></td> </tr>
+<tr bgcolor="6498bf">  <td>19/09/07 10:19:16</td>   <td>32405</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.techpath.testcases.HomePageTest@6e75aa0d]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1556995360</td>   <td></td> </tr>
 </table>
